<resources>
    <string name="app_name">au561064 Word Learner 2</string>
    <string name="description_txt">Description:</string>
    <string name="notes_txt">Notes:</string>
    <string name="cancel_txt">Cancel</string>
    <string name="edit_txt">Edit</string>
    <string name="exit_txt">Exit</string>
    <string name="apply_txt">Apply</string>
    <string name="rating_txt">Word Rating:</string>
    <string name="words_txt">My Words:</string>
    <string name="add_txt">add</string>
    <string name="search_query_txt">Search and add w</string>
    <string name="delete_txt">Delete</string>
    <string name="definition_txt">Definition</string>
</resources>
